app/styles/theme/_shale-base.scss
//Breakpoints
$bp-shale-lg: new-breakpoint(min-width 1081px);
$bp-shale-med: new-breakpoint(min-width 765px max-width 1080px);
$bp-shale-small: new-breakpoint(min-width 500px max-width 764px);
$bp-shale-ad: new-breakpoint(min-width 688px);

$bp-landing-large: new-breakpoint(min-width 1000px);
$bp-landing-medium: new-breakpoint(min-width 600px max-width 999px);
$bp-landing-small: new-breakpoint(min-width 400px max-width 599px);
$bp-landing-tiny: new-breakpoint(min-width 399px);
// Short-Hed
body {
  overflow-x: hidden;
  width: 100%;
}

h1 {
  color: $white;
  font-family: league-gothic;
  font-size: 4em;
  font-weight: 300;
  line-height: .95em;
  text-align: left;
  text-transform: uppercase;

  @include media($bp-landing-large) {
    font-size: 13em;
  }

  @include media($bp-landing-medium) {
    font-size: 10em;
  }

  @include media($bp-landing-small) {
    font-size: 7em;
  }
}

h2,
h3,
h4 {
  color: $denim;
  font-family: pt-sans;
  font-size: 1.5em;
  font-weight: 600;
  letter-spacing: .05em;
  line-height: 1.2em;
  margin-bottom: 1em;
  text-align: left;
}

// Long-Hed
h2 {
  color: $dark-denim;
  text-transform: uppercase;
}

// Main Tagline, Slideshow Title
h3 {
  color: $white;
  letter-spacing: .06em;
  margin-bottom: 1em;
}

h4 {
  clear: both;
  font-family: pt-sans-narrow;
  font-size: 1.5em;
  font-weight: 600;
  position: relative;
  text-align: left;
}

p {
  font-family: pt-sans;
  font-size: 1em;
  line-height: 1.2em;
  text-align: left;
}

hr.shale-yellow {
  background-color: $yellow;
  border: 0 none;
  height: 2px;
  margin-bottom: 1em;
  width: 100%;
}

.yellow {
  color: $yellow;
}

// story-content

table {
  color: $off-white;
  font-family: pt-sans;
  font-size: .9em;
  letter-spacing: 1px;

  @include media($bp-table) {
    border-top: 0;
  }

}

th {
  border-bottom: 0;
  color: $white;
  font-size: 1em;
  font-weight: 800;
  line-height: 1.2em;
}

tr {
  &:nth-child(odd) td {
    background-color: $grey;
  }
}

.down-arrow,
.play-button {
  display: inline-block;
  height: 2.25em;
  margin-right: 1em;
  width: 2.25em;
}

.down-arrow {
  background: url(/images/icons/ShaleLife-btn-arrow-down.png) no-repeat;
  background-position: center center;
  background-size: cover;
}

.play-button {
  background: url(/images/icons/ShaleLife-btn-play.png) no-repeat;
  background-position: center center;
  background-size: cover;
  background-color: rgba(0, 0, 0, 0);

  &:hover {
    background-color: rgba(0, 0, 0, 0);
  }
}

//Override button yellow
.play-button:hover:not(:disabled),
.play-button:hover:not(:disabled) ,
.play-button:active:not(:disabled),
.play-button:focus:not(:disabled) {
  background-color: rgba(0, 0, 0, 0);
  cursor: pointer;
}


.ad-container {
  margin: 0 auto;
}

/*START ABOUT*/

// h2 .about-header {
//   color: rgb(105, 138, 173);
//   font: 600 1.5em pt-sans;
//   letter-spacing: 0.05em;
//   line-height: 1.2em;
//   text-align: left;
//   text-transform: uppercase;
// }

// .about-name {
//   color: rgb(240, 240, 240);
//   font: 800 1.1em pt-sans;
//   letter-spacing: 1px;
//   text-align: left;
// }

// .about-body-text {
//   color: rgb(240, 240, 240);
//   font: 400 1em pt-sans;
//   line-height: 1.2em;
//   text-align: left;
// }

// a :hover .about-body-text { color: rgb(151, 199, 249); }

